--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang ="en">
    <head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width-device-width, initial-scale=1.0">
+      <meta http-equiv="X-UA-Compatible" content="ie=edge">
       <title>Excursion</title>
-      <link href="/Users/ardirakhmat/Downloads/Project Codecademy/excursion/style.css" type="text/css" rel="stylesheet">
+      <link href="resources/css/style.css" type="text/css" rel="stylesheet">
    </head>
    <body>
        <p class="discover">Discover hidden places in the world around you</p>
